--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -23,3 +23,22 @@
   top: -10px;
   right: -10px;
 }
+
+
+@media (min-width: 1281px){
+  #header{
+    width: 1200px;
+    height: 5px;
+  }
+
+  .notification {
+  position: absolute;
+  margin-top: -35px;
+}
+
+  .bell {
+    width: 20px;
+    height: 20px;
+    margin-left: 1150px;
+  }
+}
