--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -26,19 +26,30 @@
 
 
 @media (min-width: 1281px){
-  #header{
-    width: 1200px;
-    height: 5px;
+  .logo {
+    width: 156px;
+    height: 59px;
+  }
+
+  .notification .message {
+    position: absolute;
+    padding: 5px 8px;
+    background-color: #ff6501;
+    color: #fff;
+    border-radius: 50%;
+    font-size: 9px;
+    font-family: Barlow;
+    top: -10px;
+    right: -10px;
   }
 
   .notification {
   position: absolute;
-  margin-top: -35px;
 }
 
   .bell {
     width: 20px;
     height: 20px;
-    margin-left: 1150px;
+    margin-left: 240px;
   }
 }
