--- a/src/components/AppPageHeader/AppPageHeader.css
+++ b/src/components/AppPageHeader/AppPageHeader.css
@@ -62,8 +62,22 @@
     .notification {
     position: absolute;
     margin-top: 0px;
+    margin-left: 900px;
   }
   
+  }
+
+  @media (min-width: 300px) and (max-width: 399px){
+    .notification {
+      position: absolute;
+      margin-top: 0px;
+      margin-left: 200px;
+    }
+
+    .logo{
+
+      margin-left: -60px;
+    }
   }
   
   @media screen and (min-width: 768px) and (max-width: 1023px) {
