--- a/src/components/AppHeader/AppHeader.css
+++ b/src/components/AppHeader/AppHeader.css
@@ -41,6 +41,15 @@
   background: var(--text-color);
 } */
 
+@media (min-width: 481px) and (max-width: 767px){
+  .logo{
+    margin-left: -50px;
+  }
+
+  #headerText{
+    padding-left: 20px;
+  }
+}
 @media screen and (min-width: 768px) and (max-width: 1023px) {
 }
 @media screen and (min-width: 451px) and (max-width: 767px) {
