worked on add personnel, department and  account plan pages desktop design

--- a/src/routes/Home/test.css
+++ b/src/routes/Home/test.css
@@ -5,6 +5,7 @@
   .screen-padding{
     width: 1020px;
     margin-left: 320px;
+    height: 800px;
   }
   
 
@@ -15,6 +16,10 @@
     height: 80px;
     width: 100%;
     border-bottom: 1px solid rgb(238, 229, 229);
+  }
+
+  #input{
+    padding-left: 25px;
   }
 
   #gudder p{
@@ -279,13 +284,23 @@
       }
 
 
-      /*Add Personnel style Begin*/
+      /*Add Personnel and Department style Begin*/
           .addPersonnelContainer{
             width: 500px;
             float: right;
           }
 
-          .addPersonnelSpan{
+          .departmentContainer{
+            width: 500px;
+            float: right;
+          }
+
+          .editDepartment{
+            margin-top: 10px;
+          }
+
+
+          .formSpan{
             font-size: 14px;
             color: gray;
           }
@@ -298,7 +313,7 @@
             color: white;
           }
 
-       /*Add Personnel style End*/
+       /*Add Personnel and Department style End*/
     
   }
 
@@ -309,6 +324,11 @@
       display: none;
     }
 
+    .screen-padding{
+      height: 1500px;
+
+    }
+   
     .overview__action-button{
       height: 300px;
     }
@@ -321,19 +341,35 @@
       margin-left: -40px;
     }
 
+    .graphHeader span{
+        padding: 0px 12px;
+    }
+
     #rowTwo{
       width: 708px;
+      position: absolute;
+
     }
+
     #licence-info{
       width: 315px;
       height: 260px;
+      position: absolute;
+
     }
 
     #average-time{
       height: 260px;
-      margin-left: -380px;
       margin-top: 300px;
       width: 315px;
+position: absolute;
+    }
+
+    #personnelDiv{
+      margin-top: 600px;
+      position: absolute;
+      width: 315px;
+
 
     }
 
