--- a/src/components/SideNav/sidenav.css
+++ b/src/components/SideNav/sidenav.css
@@ -208,9 +208,13 @@
   }
   
   .logout {
-    margin-bottom: 54px;
+    margin-top: -15px;
     text-align: center;
     cursor: pointer;
+  }
+
+  #sidebarHr{
+    margin-top: 50px;
   }
   
   #sidebar-text{
